refactor table purchase and filter